--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@ header nav div {
 
 }
 
-header nav ul li:nth-of-type(1) {
-    font-family: Monoton, cursive;
+header nav li:nth-of-type(1) {
+    font-family: "Monoton", cursive;
     font-size: 1.5em;
     }
 
